[package]
name = "chext"
version = "0.1.0"
authors = ["Lukas Berner"]
edition = "2018"

[[bin]]
name = "hittingset"
path = "src/bin/hittingset.rs"

[[bin]]
name = "pathgen"
path = "src/bin/pathgen.rs"

[[bin]]
name = "wspd"
path = "src/bin/wspd.rs"

[[bin]]
name = "quadtree_analysis"
path = "src/bin/quadtree_analysis.rs"

[[bin]]
name = "wspd_analysis"
path = "src/bin/wspd_analysis.rs"

[[bin]]
name = "hittingset_analysis"
path = "src/bin/hittingset_analysis.rs"

[[bin]]
name = "hittingset_threshold_test"
path = "src/bin/hittingset_threshold_test.rs"

[lib]
bench = false

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.59"
rustc-hash = "1.1.0"
staticmap = "0.4.0"
bincode = "1.3.3"
clap = { version = "2.34.0" } #, features = ["derive"] }
rand = "0.8.4"
derive_more = "0.99.16"
derive_index = { git = "https://github.com/bernlu/derive_index.git" }
rayon = "1.5.1"
geojson = "0.22.2"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
